@@ -5,6 +5,9 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
    - Add Hungarian translation.
    - Add Brazilian Portuguese translation.
 
+ Cruise
+   - Fixed a problem with Raoul appearing when examining the Book
+
  Groovie:
    - Fixed a regression that made the Russian version of T7G crash.
 
